--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
         <title>@ViewData["Title"] - WCSTrainer</title>
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/mobileSite.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/colors.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/universal.css" asp-append-version="true" />
     </head>
 
     <body>
