--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -1,48 +1,3 @@
-:root {
-    --black: black;
-    --gray1: #141516;
-    --gray2: #1b2124;
-    --gray3: #22272a;
-    --gray4: #45494e;
-    --textMain: white;
-    --textSub1: #a0a9b4;
-    --textSub2: #787f87;
-    --mainTheme: #4631ae;
-    --red1: #ff4d4d;
-    --red2: #d81d1d;
-    --blue1: #1bc0ff;
-    --blue2: #0a8dbf;
-    --green1: #81ff8f;
-    --green2: #0fb021;
-    --yellow1: #fff764;
-    --yellow2: #d8ce13;
-}
-
-.light-mode {
-    --black: #dcd7c7;
-    --gray1: #c8c4b6;
-    --gray2: #b5b09d;
-    --gray3: #e9e5d6;
-    --gray4: black;
-    --textMain: black;
-    --textSub1: black;
-    --textSub2: black;
-    --mainTheme: #e45d5d;
-    --red1: #e00606;
-    --red2: #d81d1d;
-    --blue1: black;
-    --blue2: black;
-    --green1: black;
-    --green2: black;
-    --yellow1: black;
-    --yellow2: black;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-}
-
 nav {
     top: 0;
     display: flex;
@@ -107,43 +62,6 @@ nav {
                 height: 100%;
                 font-size: 15px;
             }
-
-html {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    min-width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--gray1);
-    color: var(--textMain);
-}
-
-.content {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
-    width: 1500px;
-    max-width: 95%;
-}
-
-.maintitle {
-    margin-top: 100px;
-    color: var(--textMain);
-    font-size: 50px;
-}
-
-.maintitle2 {
-    margin-top: 10px;
-    color: var(--textMain);
-    font-size: 40px;
-}
 
 /*--------------------------------------------------------
                        MAIN PANEL                         
@@ -753,78 +671,7 @@ body {
                                 cursor: pointer;
                             }
 
-/*-------------------------------------------------------*/
-/*                   UNIVERSAL BUTTONS                   */
-/*-------------------------------------------------------*/
 
-.btn {
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    user-select: none;
-}
-
-.nbg-btn {
-    background: none;
-    border: none;
-}
-
-    .nbg-btn:active {
-        background-color: var(--gray4);
-        cursor: default;
-    }
-
-.bg-btn {
-    border: 1px solid var(--gray4);
-    background-color: var(--gray2);
-    border-radius: 5px;
-}
-
-.btnWhite {
-    color: var(--textMain);
-}
-
-    .btnWhite:hover {
-        background-color: var(--gray4);
-    }
-
-.btnGray {
-    color: var(--gray4);
-}
-
-    .btnGray:hover {
-        background-color: var(--gray3);
-    }
-
-.btnBlue {
-    color: var(--blue1);
-}
-
-    .btnBlue:hover {
-        border-color: black;
-        background-color: var(--blue2);
-        color: white;
-    }
-
-.btnRed {
-    color: var(--red1);
-}
-
-    .btnRed:hover {
-        border-color: black;
-        background-color: var(--red2);
-        color: white;
-    }
-
-.btnGreen {
-    color: var(--green1);
-}
-
-    .btnGreen:hover {
-        border-color: black;
-        background-color: var(--green2);
-        color: white;
-    }
 
 /*--------------------------------------------------------*/
 /*                     DELETION POPUP                     */
@@ -903,30 +750,6 @@ body {
     z-index: 1;
 }
 
-/*--------------------------------------------------------
-                     DELETION POPUP                     
---------------------------------------------------------*/
-
-.active {
-    color: var(--green1);
-}
-
-.awaiting {
-    color: var(--yellow1);
-}
-
-.completed {
-    color: var(--blue1);
-}
-
-.verified {
-    color: var(--red1);
-}
-
-button {
-    background: none;
-    border: none;
-}
 
 /*--------------------------------------------------------
                         COMPONENTS                        
@@ -1056,9 +879,7 @@ button {
                 font-size: 17px;
             }
 
-.hidden {
-    display: none;
-}
+
 
 .drop-main {
     background-color: var(--gray3);
@@ -1105,12 +926,14 @@ button {
                 }
 
 .main-banner {
-    background-image: linear-gradient(to bottom right, #135868,#172a3d);
+    background-image: linear-gradient(to bottom right, var(--gray1),var(--gray3),var(--gray1),var(--gray1),var(--gray3),var(--gray1));
     background-color: black;
     display: flex;
     width: 100vw;
     justify-content: center;
     height: 500px;
+    border-bottom: 1px solid var(--gray4);
+    border-top: 1px solid var(--gray4);
 }
 
     .main-banner .banner-container {
@@ -1143,18 +966,12 @@ button {
                 }
 
                 .main-banner .banner-container .right .info .btn {
-                    color: black;
                     font-weight: bold;
-                    background-color: #21c9ef;
                     width: 200px;
-                    justify-self: flex-end;
                     padding: 10px;
-                    box-shadow: 2px 2px 5px black;
+                    background-color: var(--blue1);
+                    color: white;
                 }
-
-                    .main-banner .banner-container .right .info .btn:hover {
-                        background-color: #cff6ff;
-                    }
 
         .main-banner .banner-container .left {
             width: 50%;
