--- a/WCSTrainer/Pages/Index.cshtml
+++ b/WCSTrainer/Pages/Index.cshtml
@@ -24,7 +24,7 @@
         </div>
         <div class="left">
             <div class="image">
-                <img src="images/1N.png" alt="Sample Photo" />
+                <img src="images/1N.png"/>
             </div>
         </div>
     </div>
