--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -24,9 +24,9 @@
                 <div class="nav-buttons">
                     <ul>
                         <li class="main-title"><a>WCS Trainer</a></li>
-                        <li><a asp-page="/Index">Home</a></li>
+                        <li><a asp-page="/Index" class="clickable">Home</a></li>
                         @if (SignInManager.IsSignedIn(User)) {
-                            <li><a asp-page="/TrainingOrders/Index">My Panel</a></li>
+                            <li><a asp-page="/TrainingOrders/Index" class="clickable">My Panel</a></li>
                         }
                     </ul>
                 </div>
