--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -31,6 +31,7 @@
                                         <p class="control-label">Trainers</p>
                                         <p id="trainerDanger" class="text-danger" style="display: none;">Please select at least one trainer.</p>
                                     </div>
+                                    <div class="sv-comp-app"></div>
                                     <div class="selections">
                                         <ul id="trainerList">
                                             @foreach (string trainerName in Model.trainersList) {
