--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -784,7 +784,7 @@ nav {
                 width: 100%;
             }
 
-        .people-component .people-container .people {
+        .people-component .people-container ul {
             height: 50%;
             display: flex;
             font-size: 15px;
@@ -793,24 +793,23 @@ nav {
             scrollbar-width: none;
         }
 
-            .people-component .people-container .people .person {
+            .people-component .people-container ul li {
                 border-bottom: 1px solid var(--gray4);
                 padding: 5px 0;
                 font-size: 13px;
             }
 
-                .people-component .people-container .people .person:hover {
+                .people-component .people-container ul li:hover {
                     background-color: var(--gray3);
                     cursor: pointer;
                 }
 
-                .people-component .people-container .people .person:active {
-                    background-color: var(--gray4);
-                    cursor: default;
+                .people-component .people-container ul li .sub {
+                    color: var(--textSub1);
                 }
 
-                .people-component .people-container .people .person .sub {
-                    color: var(--textSub1);
+                .people-component .people-container ul .selected {
+                    background-color: var(--gray4) !important;
                 }
 
         .people-component .people-container .groups {
@@ -830,42 +829,48 @@ nav {
         .people-component .details .top {
             display: flex;
             flex-direction: column;
-            font-size: 18px;
-            gap: 10px;
             flex-grow: 1;
         }
 
-            .people-component .details .top .title {
-                font-size: 30px;
-                padding-bottom: 10px;
-            }
-
-            .people-component .details .top .info {
-                display: flex;
-                gap: 6px;
-            }
-
-                .people-component .details .top .info .one {
-                    color: var(--textSub1);
-                }
-
-                .people-component .details .top .info .two {
-                    color: var(--textMain);
-                }
-
-            .people-component .details .top .trainings {
-                padding: 0 10px;
+            .people-component .details .top .info-container {
                 display: flex;
                 flex-direction: column;
+                gap: 10px;
+                font-size: 18px;
+                height: 100%;
             }
 
-                .people-component .details .top .trainings .training {
-                    border-bottom: 1px solid var(--gray4);
-                    margin-top: 5px;
-                    font-size: 15px;
-                    border-radius: 3px;
-                    padding: 2px 5px;
+                .people-component .details .top .info-container .title {
+                    font-size: 30px;
+                    padding-bottom: 10px;
                 }
+
+                .people-component .details .top .info-container .info {
+                    display: flex;
+                    gap: 6px;
+                }
+
+                    .people-component .details .top .info-container .info .one {
+                        color: var(--textSub1);
+                    }
+
+                    .people-component .details .top .info-container .info .two {
+                        color: var(--textMain);
+                    }
+
+                .people-component .details .top .info-container .list {
+                    padding: 0 10px;
+                    display: flex;
+                    flex-direction: column;
+                }
+
+                    .people-component .details .top .info-container .list .item {
+                        border-bottom: 1px solid var(--gray4);
+                        margin-top: 5px;
+                        font-size: 15px;
+                        border-radius: 3px;
+                        padding: 2px 5px;
+                    }
 
         .people-component .details .bottom {
             align-items: flex-end;
@@ -880,8 +885,6 @@ nav {
                 width: 150px;
                 font-size: 17px;
             }
-
-
 
 .drop-main {
     background-color: var(--gray3);
